hard-gists/fbecc71022b62515a484a4a33d13014d/run.log
=== Docker Run Log for fbecc71022b62515a484a4a33d13014d ===
Started at: Mi 29. Okt 21:41:44 CET 2025

[2025-10-29 21:41:45] START: Running container for fbecc71022b62515a484a4a33d13014d
[2025-10-29 21:41:45] SUCCESS: Container 75165637183e225973d9e751303b3a9eab498de70e011631af67a759f5ff45f4 started for fbecc71022b62515a484a4a33d13014d
=== Container logs for fbecc71022b62515a484a4a33d13014d ===
  File "/snippet.py", line 26
    except self.model.DoesNotExist, e:
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for fbecc71022b62515a484a4a33d13014d ===
[2025-10-29 21:41:47] INFO: Container 75165637183e225973d9e751303b3a9eab498de70e011631af67a759f5ff45f4 has stopped
